fix: block timestamp in Light theme/lightweight ui has low contrast
Fixes #6226

--- a/plugins/plugin-client-common/web/scss/components/Table/Lightweight.scss
+++ b/plugins/plugin-client-common/web/scss/components/Table/Lightweight.scss
@@ -106,6 +106,12 @@ $row-height: 1.5em;
     padding: $block-padding 0;
   }
 
+  @include WidthConstrained {
+    @include BlockDuration {
+      opacity: 1;
+    }
+  }
+
   @include BlockTimestamp {
     color: var(--color-base0A);
 
